--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "build": "tsc",
     "lint": "tsc --noEmit && eslint \"**/*.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && jest"
   },
   "author": "Mirko Westermeier, Service Center for Digital Humanities, University of Muenster",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
